# medica_slide_score

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tiles_ui.sh  setup.py
config/: train1.yaml
do/: README.md  common.sh  install_python3.11.sh  run.sh  venv.sh
slideapp/: config.py  dcm_reader.py  merge_train_csvs.py  remove_hard_samples.py  results.txt  run_app.sh  sendemail.py  signal_to_noise.py  slide_access_time.py  slide_loader.py  slidemgr.py  tiles_gui.py  tiles_mgui.py
slidecore/: __init__.py  readme.md
slidecore/config/: train1.yaml  train1_dudi.yaml
slidecore/net/: arc_cos_head.py  attention.py  calc_drv.py  create_head_utils.py  datatset.py  ensemble.py  get_net_params.py  gpu_utils.py  predict1.py  readme.txt  resnet.py  train1.py  yaml_obj.py
slidecore/net/config/: train1.yaml  train1_dudi.yaml
slidecore/predict/: predict_imgs.py  predict_results.py
slidecore/predict/test/: test_predict_imgs.py
slidecore/predict_imgs/: predict_imgs.py  predict_results.py
slidecore/predict_imgs/test/: test_predict_image.py
slidems/: .gitignore  README.md  pyproject.toml  setup.py
slidems/do/: README.md  common.sh  evaluate.sh  install_opeslide.sh  install_python3.11.sh  pack.sh  run_jupiter.sh  train.sh  venv.sh
slidems/slidems/: evaluate_slide.py
slidems/slidems/common/: logi.py  metadata_io.py
slidems/slidems/common/test/: metadata_test.json  test_metadata_io.py
slidems/slidems/slide/: evaluate_focus.py  extract_thumbnail.py
slidems/slidems/tile/: evaluator.py  extractor.py
slidems/slidems/tile/tests/: test_evaluator.py  test_extractor.py
slidems/slidems/train/: predict.ipynb  predict.py  test_slide.ipynb  train.ipynb  train.py
utils/: evaluator.py  extractor.py  install_openslide.py
