[build-system]
requires = ["setuptools>=65.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/dudi-l/slidecore.git"


[project]
name = "slidecore"
description = "PathoLogic AI slides classification tool"
authors = [
  {name = "Dudi Levi"},
  {email = "dudilv@gmail.com" }
]
readme = "README.md"
#license = {file = "License"}
requires-python = ">=3.11"

dynamic = ["version"]

dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "albumentations==1.1.0",
    "opencv-python",
    "numpy",
    "PyYAML"
]


[project.optional-dependencies]
development = [
    "pytest",
]


[tool.setuptools.packages.find]
include = ["slidecore*"]
#exclude = ["slidems.train"]


#[tool.setuptools.package-data]
#"slidecore" = ["main_coach.ui"]



