[build-system]
requires = ["setuptools>=65.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/dudi-l/slidecore.git"


[project]
name = "slidecore"
description = "PathoLogic AI slides classification tool"
authors = [
  {name = "Dudi Levi"},
  {email = "dudilv@gmail.com" }
]
readme = "README.md"
#license = {file = "License"}
requires-python = ">=3.11"

dynamic = ["version"]

dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "albumentations==1.1.0",
    "numpy==1.24.4",
    "PyYAML",
    "opencv-python",
    "pandas"
]


[project.optional-dependencies]
development = [
    "pytest",
]
train = [
    "slidecore[development]",
    "matplotlib",
    "tqdm==4.59.0"
]


[tool.setuptools.packages.find]
include = ["slidecore*"]
#exclude = ["slidems.train"]


#[tool.setuptools.package-data]
#"slidecore" = ["main_coach.ui"]



